# ngtpy

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
src/ngtpy/: __init__.py  _ngtpy.cpp
tests/: test_ngtpy.py
