[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.9.0",
    "cmake>=3.22",
    "scikit-build>=0.13",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.cibuildwheel]
build = [
    "cp36-manylinux_x86_64",
    "cp36-macosx_x86_64",
    "cp37-manylinux_x86_64",
    "cp37-macosx_x86_64",
    "cp38-manylinux_x86_64",
    "cp38-macosx_x86_64",
    "cp39-manylinux_x86_64",
    "cp39-macosx_x86_64",
    "cp310-manylinux_x86_64",
    "cp310-macosx_x86_64",
]

test-requires = "pytest"
test-command = "pytest {project}/tests"
